# tauri_altmediaplayer_v2

./: .eslintrc.json  eslint.config.mjs  package.json  required icons.txt  tsconfig.json  vite.config.ts
src/: GtkResize.svelte  common.css  constants.ts  contextMenuState.svelte.ts  deferred.ts  fileDropHandler.ts  ipc.ts  path.ts  settings.ts  shell.ts  shortcut.ts  types.d.ts  util.ts
src-tauri/: .gitignore  Cargo.toml  migrated.json.migrated  rustfmt.toml  tauri.conf.json  tauri.conf.json.migrated  tauri.conf.json.old  tauri.linux.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/debian/: taltmediaplayer.desktop
src-tauri/src/: custom.rs  dialog.rs  helper.rs  lib.rs  main.rs  menu.rs  session.rs  settings.rs  shell.rs  util.rs
src-tauri/src/exp/: chrome.cpp  config.cpp  custom.cpp  custom_20240510.rs  custom_20240511.rs  custom_on_message.rs  helper.rs  helper_force_dark.rs  helper_ownerdraw.rs  helper_test.rs  mcustom.cpp  menu.rs  muda_menu.rs  test.cpp  utilbk.rs  webview_menu.rs
src/convert/: Convert.svelte  RadioGroup.svelte  app.ts  appState.svelte.ts  appStateReducer.ts  convert.css  index.html
src/menu/: Menu.svelte  MenuItem.svelte  Menus.svelte  app.ts  appStateReducer.ts  contextmenu.css  menuitems.ts
src/player/: Footer.svelte  Player.svelte  Slider.svelte  app.ts  appStateReducer.ts  player.css
src/playlist/: List.svelte  Playlist.svelte  app.ts  appStateReducer.ts  editor.ts  playlist.css  test.html
src/tag/: Tag.svelte  app.ts  tag.css
src/translation/: en.ts  ja.ts  translation.ts  useTranslation.svelte.ts  useTranslation.ts
