[package]
name = "taltmediaplayer"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.5.1", features = [ "protocol-asset", "devtools"] }
tauri-plugin-single-instance = "2.0.0"
strum_macros = "0.26"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.19.0"
async-std = "1.13.0"
nonstd = { git = "https://github.com/mrdkprj/nonstd.git", rev="db85c25521c2db013b58a46347d16162cbf455ae", features = ["webview2"] }
wcpopup = "0.7.0"

[target.'cfg(target_os = "linux")'.dependencies.gtk]
version = "0.18.2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[patch.crates-io]
#tao = { path = "./tao-0.29.0" }

[profile.release]
panic = "abort" # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true # Enables link to optimizations
opt-level = "s" # Optimize for binary size
strip = true # Remove debug symbols

