[package]
name = "taltmediaplayer"
version = "0.0.0"
description = "altmediaplayer"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.9", features = [ "protocol-asset", "devtools"] }
strum_macros = "0.26"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zouni = { version = "0.1", features = ["webview2", "webkit2gtk"] }
wcpopup = { version = "0.9", features = ["webview"] }
tauri-plugin-single-instance = "=2.3.0"

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.61"
features = [
  "Win32_System_Threading",
  "Win32_Foundation",
]

[target.'cfg(target_os = "linux")'.dependencies]
gtk = { version = "0.18" }
zbus = { version = "5.12.0" }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[lib]
name = "altmediaplayer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[profile.release]
panic = "abort" # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true # Enables link to optimizations
opt-level = "s" # Optimize for binary size
strip = true # Remove debug symbols
